--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
 </div>
    
     <div class="mainfont">
+    <div class="header">
     <h1>About Me</h1>
+      </div>
     <p>Hello, Im the creator of inublog. I have been an army (bts fan) since about August 2017. I have been teaching myself Korean since July 2018. I like to kpop journal, and practice my note-taking skills during my spare time. I am about an intermediate beginner in Korean. My main language is English, but I also know Urdu because of my family heritage. I also learn Arabic in school, but Im not very good. I love to kpop journal about members, birthdays, new music videos/albums, and my opinions on new subjects that surround the kpop groups that I stan.  
       <h1>Q&A</h1>
       <ul>
@@ -27,7 +29,7 @@
         <ul> Q. What is your favorite color?</ul>
         <ul> A. My favorite colors are black and mint, I also really like dark gray, and I prefer silver over gold.</ul>
       </ul>   
-      <h3> <a href="https://www.instagram.com/artbyinu/">My Art Instagram: artbyinu </a> </h3>
+      <h3> <a href="https://www.instagram.com/artbyinu/" target="_blank">My Art Instagram: artbyinu </a> </h3>
     </div>
   </body>
 </html>
