--- a/korean_Learning.html
+++ b/korean_Learning.html
@@ -17,12 +17,12 @@
     <div class="mainfont">
   These are the materials that I use for my Korean studies:
   <ul> 
-    <li><a href="koreanclass101.com">Koreanclass101.com</a></li>
-   <li><a href="talktomeinkorean.com">Talktomeinkorean.com</a></li> 
-   <li><a href="https://www.barnesandnoble.com/w/living-language-korean-essential-edition-living-language/1114306246?ean=9780307972248&st=PLA&sid=BNB_DRS_New+Core+Shopping+Top+Margin+EANs_00000000&2sid=Google_&sourceId=PLGoP210227&gclid=CjwKCAjwtvnbBRA5EiwAcRvnptY9n6ExuKl3k5o2fLXFm0TnJ5qr7DNBgiB8LIFhefaOcJUphTdjjBoCLvMQAvD_BwE#/">Living Language Korean Essential Edition</a></li>
-  <li><a href="https://textbookaz.com/products/9780794607746-0794607748-periplus-pocket-korean-dictionary-koreanenglish-englishkorean-second-edition-periplus-pocket-dictionaries?variant=7740607037503">Pocket Korean to English Dictionary</a></li>
-    <li><a href="https://www.amazon.com/Tombow-Markers-10-Pack-Pastel-56187/dp/B07581CXYK">Tombow Brush Pens -- Pastel Set</a></li>
-    <li><a href="https://www.amazon.com/Muji-Point-Black-0-38mm-Japan/dp/B01N8QNC59/ref=sr_1_2?ie=UTF8&qid=1535088145&sr=8-2&keywords=0.38+muji+black">Muji black pens 0.38 -- 3-pack</a></li>
+    <li><a href="koreanclass101.com"target="_blank">Koreanclass101.com</a></li>
+   <li><a href="talktomeinkorean.com"target="_blank">Talktomeinkorean.com</a></li> 
+   <li><a href="https://www.barnesandnoble.com/w/living-language-korean-essential-edition-living-language/1114306246?ean=9780307972248&st=PLA&sid=BNB_DRS_New+Core+Shopping+Top+Margin+EANs_00000000&2sid=Google_&sourceId=PLGoP210227&gclid=CjwKCAjwtvnbBRA5EiwAcRvnptY9n6ExuKl3k5o2fLXFm0TnJ5qr7DNBgiB8LIFhefaOcJUphTdjjBoCLvMQAvD_BwE#/"target="_blank">Living Language Korean Essential Edition</a></li>
+  <li><a href="https://textbookaz.com/products/9780794607746-0794607748-periplus-pocket-korean-dictionary-koreanenglish-englishkorean-second-edition-periplus-pocket-dictionaries?variant=7740607037503"target="_blank">Pocket Korean to English Dictionary</a></li>
+    <li><a href="https://www.amazon.com/Tombow-Markers-10-Pack-Pastel-56187/dp/B07581CXYK"target="_blank">Tombow Brush Pens -- Pastel Set</a></li>
+    <li><a href="https://www.amazon.com/Muji-Point-Black-0-38mm-Japan/dp/B01N8QNC59/ref=sr_1_2?ie=UTF8&qid=1535088145&sr=8-2&keywords=0.38+muji+black"target="_blank">Muji black pens 0.38 -- 3-pack</a></li>
     <li> Mini Ruler -- 6inch </li>
     <li> Binder</li>
     <li> Composition notebook</li>
@@ -34,13 +34,13 @@
       </ul>   
       I also watch videoes on youtube from these channels 
       <ul>
-     <li> <a href="https://www.youtube.com/channel/UCSGJoUkoHBvXBWqlTk2h7CQ">Jasmine Lipska</a> </li>
-     <li> <a href="https://www.youtube.com/channel/UCcA88_Z7wQWMoQ9bKwjuanA">Korean Unnie 한국언니</a> </li>
-     <li> <a href="https://www.youtube.com/user/koreanclass101">Learn Korean with KoreanClass101.com</a> </li>
-     <li> <a href="https://www.youtube.com/channel/UCv3ptHlv--3v7NXu9Bm9GUw">Natalia Garza</a> </li>
-     <li> <a href="https://www.youtube.com/user/talktomeinkorean">Talk To Me In Korean</a> </li>
-     <li> <a href="https://www.youtube.com/user/absoluteB2UTY">휘트니 whitneybae</a> </li>
-     <li> <a href="https://www.youtube.com/user/seoulsarang9095">호주사라 HojuSara</a> </li>
+     <li> <a href="https://www.youtube.com/channel/UCSGJoUkoHBvXBWqlTk2h7CQ"target="_blank">Jasmine Lipska</a> </li>
+     <li> <a href="https://www.youtube.com/channel/UCcA88_Z7wQWMoQ9bKwjuanA"target="_blank">Korean Unnie 한국언니</a> </li>
+     <li> <a href="https://www.youtube.com/user/koreanclass101"target="_blank">Learn Korean with KoreanClass101.com</a> </li>
+     <li> <a href="https://www.youtube.com/channel/UCv3ptHlv--3v7NXu9Bm9GUw"target="_blank">Natalia Garza</a> </li>
+     <li> <a href="https://www.youtube.com/user/talktomeinkorean"target="_blank">Talk To Me In Korean</a> </li>
+     <li> <a href="https://www.youtube.com/user/absoluteB2UTY"target="_blank">휘트니 whitneybae</a> </li>
+     <li> <a href="https://www.youtube.com/user/seoulsarang9095"target="_blank">호주사라 HojuSara</a> </li>
       </ul>
       
     </div>
