--- a/kpop_fan_life.html
+++ b/kpop_fan_life.html
@@ -16,7 +16,9 @@
 </div>
     <div class="mainfont">
 <!--       this is where i will be posting all of my kpop journal spread -->
+      <div class="header">
       <h1> Kpop Journal Spreads</h1>
+      </div>
       <img class="spreads" src="https://uniim1.shutterfly.com/ng/services/mediarender/THISLIFE/022054818366/media/74010942832/medium/1533265977/enhance" alt="Love Yourself Tear, & Fake Love">
     <br>
       <img class="spreads"src="https://uniim1.shutterfly.com/ng/services/mediarender/THISLIFE/022054818366/media/74010942825/large/1533265976/enhance"alt="Jungkook Biaswrecker and Hobi Quote">
