--- a/study_life.html
+++ b/study_life.html
@@ -14,8 +14,9 @@
   <a href="./kpop_fan_life.html">Kpop Fan Life</a>
   <a href="./study_life.html">Study Life</a>
 </div>
+  
     <div class="mainfont">
-      this is where i will be posting study and note-taking tips and tricks
+      I will be posting here soon
     </div>
   </body>
 </html>
