--- a/korean_Learning.html
+++ b/korean_Learning.html
@@ -17,8 +17,8 @@
     <div class="mainfont">
   These are the materials that I use for my Korean studies:
   <ul> 
-    <li><a href="koreanclass101.com"target="_blank">Koreanclass101.com</a></li>
-   <li><a href="talktomeinkorean.com"target="_blank">Talktomeinkorean.com</a></li> 
+    <li><a href="https://www.koreanclass101.com/index.php"target="_blank">Koreanclass101.com</a></li>
+   <li><a href="http://talktomeinkorean.com"target="_blank">Talktomeinkorean.com</a></li> 
    <li><a href="https://www.barnesandnoble.com/w/living-language-korean-essential-edition-living-language/1114306246?ean=9780307972248&st=PLA&sid=BNB_DRS_New+Core+Shopping+Top+Margin+EANs_00000000&2sid=Google_&sourceId=PLGoP210227&gclid=CjwKCAjwtvnbBRA5EiwAcRvnptY9n6ExuKl3k5o2fLXFm0TnJ5qr7DNBgiB8LIFhefaOcJUphTdjjBoCLvMQAvD_BwE#/"target="_blank">Living Language Korean Essential Edition</a></li>
   <li><a href="https://textbookaz.com/products/9780794607746-0794607748-periplus-pocket-korean-dictionary-koreanenglish-englishkorean-second-edition-periplus-pocket-dictionaries?variant=7740607037503"target="_blank">Pocket Korean to English Dictionary</a></li>
     <li><a href="https://www.amazon.com/Tombow-Markers-10-Pack-Pastel-56187/dp/B07581CXYK"target="_blank">Tombow Brush Pens -- Pastel Set</a></li>
